--- a/style.css
+++ b/style.css
@@ -9,9 +9,38 @@ body {
     background-color: #0b0f19;
     /* background-color: #0f172a; */
     color: #e7e7e7;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     line-height: 1.5;
     /* background-color: #ffff; */
+}
+
+.section-1 {
+    min-height: 100vh;
+}
+
+/* Fix */
+/* Fix horizontal scrollbar */
+body {
+    overflow-x: hidden;
+    max-width: 100vw;
+}
+
+.section-1 {
+    overflow-x: hidden;
+    position: relative;
+}
+
+.image-gradient,
+.layer-blur,
+.robot {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
+.robot {
+    max-width: 100vw;
+    pointer-events: none;
+    /* Prevents any interaction issues */
 }
 
 /* Gradient and layer blur effect  */
@@ -106,6 +135,7 @@ main {
     flex-direction: column;
     justify-content: center;
     min-height: calc(90vh - 6rem);
+    /* min-height: 100vh; */
 }
 
 .content {
@@ -219,7 +249,7 @@ main {
 
 .robot {
     position: absolute;
-    top: 0;
+    top: -10%;
     right: -20%;
     filter: contrast(1.1) brightness(.98);
 }
